--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -49,7 +49,13 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
+          
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository }}
+          
       # 构建并推送
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -57,4 +63,5 @@ jobs:
           context: .
           push: true
           # 注意：镜像名称必须全部小写
-          tags: ghcr.io/${{ lower(github.repository_owner) }}/cc-practice:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
