--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,14 +4,11 @@ on:
   push:
     branches: [ "main" ]
 
-# 这是一个重要的设置：定义 GITHUB_TOKEN 的权限
-# 我们需要写入 Packages 的权限来推送镜像
 permissions:
   contents: read
   packages: write
 
 jobs:
-  # 第一步：测试代码
   test:
     runs-on: ubuntu-latest
     steps:
@@ -29,39 +26,44 @@ jobs:
       - name: Run tests
         run: npm test
 
-  # 第二步：构建并推送 Docker 镜像
   build-and-push:
-    needs: test # 只有测试通过才运行
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 设置 Docker Buildx 环境 (Docker 官方推荐)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 登录到 GitHub Container Registry (ghcr.io)
-      # ${{ secrets.GITHUB_TOKEN }} 是 GitHub 自动生成的密钥，无需手动设置
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
+          # 这里会自动使用触发 Workflow 的用户名 (AM-SuSh)
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           
+
+      # 配置 metadata 生成多个标签
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ghcr.io/${{ github.repository }}
+          # 这里使用了多行文本 (tags 列表)
+          # 1. type=raw,value=latest  -> 生成 :latest 标签
+          # 2. type=sha               -> 生成基于 Commit SHA 的标签 (默认前7位，如 :sha-8f32c9a)
+          tags: |
+            type=raw,value=latest
+            type=sha
           
-      # 构建并推送
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          # 注意：镜像名称必须全部小写
+          # 直接引用上面生成的 tags，会自动包含 :latest 和 :sha-xxxxxxx
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
